--- a/compose.yaml
+++ b/compose.yaml
@@ -6,7 +6,7 @@ services:
     working_dir: /app
     env_file:
       - .env
-    command: /bin/sh -c 'npm install && npm start'
+    command: /bin/sh -c 'npm install && npm run start'
     ports:
       - '3003:3003'
     volumes:
@@ -19,7 +19,7 @@ services:
     image: mariadb:lts
     restart: always
     healthcheck:
-      interval: 30s
+      interval: 20s
       retries: 3
       test:
         [
@@ -29,7 +29,7 @@ services:
           "--connect",
           "--innodb_initialized"
         ]
-      timeout: 30s
+      timeout: 20s
     environment:
       MYSQL_DATABASE: ${DB_NAME}
       MYSQL_USER: ${DB_USER}
