--- a/src/package.json
+++ b/src/package.json
@@ -18,6 +18,8 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.7",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
