--- a/compose.yaml
+++ b/compose.yaml
@@ -6,7 +6,7 @@ services:
     working_dir: /app
     env_file:
       - .env
-    command: /bin/sh -c 'npm install && npm run start'
+    command: /bin/sh -c 'npm install && npm run start && npm run test '
     ports:
       - '3003:3003'
     volumes:
