--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "target": "es6",
+    "types": ["node", "jest"],
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist"
