--- a/src/package.json
+++ b/src/package.json
@@ -33,6 +33,7 @@
     "config": "^3.3.11",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.7",
     "sequelize": "^6.37.3",
