--- a/src/package.json
+++ b/src/package.json
@@ -29,6 +29,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "config": "^3.3.11",
     "dotenv": "^16.3.1",
