--- a/src/package.json
+++ b/src/package.json
@@ -29,6 +29,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@types/multer": "^1.4.11",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "config": "^3.3.11",
@@ -36,6 +37,7 @@
     "express": "^4.17.1",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "sequelize": "^6.37.3",
     "swagger-jsdoc": "^6.2.8",
