--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/config": "^0.0.39",
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.1",
     "@types/jest": "^29.5.12",
@@ -33,6 +34,7 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "config": "^3.3.11",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "express-validator": "^7.0.1",
